feat: refacto script

--- a/notebooks/001_ROFA_exploration.ipynb
+++ b/notebooks/001_ROFA_exploration.ipynb
@@ -19,7 +19,7 @@
     "from certifia.training import Training\n",
     "\n",
     "\n",
-    "pd.set_option('display.max_rows', 100)\n",
+    "pd.set_option('display.max_rows', 1000)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "pd.set_option('display.width', 1000)"
    ]
@@ -120,22 +120,22 @@
     {
      "data": {
       "text/plain": [
-       "['HEURE DE DEPART',\n",
-       " 'RETARD SECURITE',\n",
-       " \"HEURE D'ARRIVEE\",\n",
-       " 'ATTERRISSAGE',\n",
-       " 'RETARD COMPAGNIE',\n",
+       "['RETARD COMPAGNIE',\n",
        " 'RETARD SYSTEM',\n",
-       " \"RETARD A L'ARRIVEE\",\n",
-       " 'DECOLLAGE',\n",
-       " 'TEMPS DE VOL',\n",
-       " 'RETART DE DEPART',\n",
-       " 'ANNULATION',\n",
+       " \"HEURE D'ARRIVEE\",\n",
+       " 'RETARD SECURITE',\n",
        " 'RETARD AVION',\n",
-       " 'TEMPS PASSE',\n",
-       " \"RAISON D'ANNULATION\",\n",
        " 'RETARD METEO',\n",
-       " 'DETOURNEMENT']"
+       " 'ATTERRISSAGE',\n",
+       " 'ANNULATION',\n",
+       " \"RAISON D'ANNULATION\",\n",
+       " \"RETARD A L'ARRIVEE\",\n",
+       " 'DETOURNEMENT',\n",
+       " 'HEURE DE DEPART',\n",
+       " 'TEMPS DE VOL',\n",
+       " 'TEMPS PASSE',\n",
+       " 'DECOLLAGE',\n",
+       " 'RETART DE DEPART']"
       ]
      },
      "execution_count": 6,
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "96cc6bdf",
+   "id": "7a2142f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,8 +1913,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  26 tasks      | elapsed:    9.6s\n",
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:   27.2s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  26 tasks      | elapsed:    9.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:   27.7s finished\n"
      ]
     }
    ],
