--- a/notebooks/001_ROFA_exploration.ipynb
+++ b/notebooks/001_ROFA_exploration.ipynb
@@ -16,7 +16,7 @@
     "from certifia.data_engineering.data_access import read_db\n",
     "from certifia.utils.multi_column_label_encode import MultiColumnLabelEncoder\n",
     "from certifia.feature_engineering import FeatureEngineering\n",
-    "from certifia.training import Training\n",
+    "from certifia.model import model\n",
     "\n",
     "\n",
     "pd.set_option('display.max_rows', 1000)\n",
@@ -1874,13 +1874,13 @@
     "    def predict(self, X):\n",
     "        return self.rf_regressor.predict(X)\n",
     "\n",
-    "    def score(self, X, y):\n",
+    "    def eval_model(self, X, y):\n",
     "        y_pred = self.predict(X)\n",
     "        logger = Logger().logger\n",
     "        logger.info(f'Mean Absolute Error: {metrics.mean_absolute_error(y, y_pred)}')\n",
     "        logger.info(f'Mean Squared Error: {metrics.mean_squared_error(y, y_pred)}')\n",
     "        logger.info(f'Root Mean Squared Error: {np.sqrt(metrics.mean_squared_error(y, y_pred))}')\n",
-    "        logger.info(f'R2 score: {metrics.r2_score(y, y_pred)}')\n",
+    "        logger.info(f'R2 eval_model: {metrics.r2_score(y, y_pred)}')\n",
     "\n",
     "    # Pour un classif algorithm\n",
     "    def classif_score(self, X, y):\n",
@@ -2120,12 +2120,12 @@
       "INFO:MainLogger:Mean Absolute Error: 18.691401653391825\n",
       "INFO:MainLogger:Mean Squared Error: 1462.384702676079\n",
       "INFO:MainLogger:Root Mean Squared Error: 38.24113887786397\n",
-      "INFO:MainLogger:R2 score: 0.0262124236620932\n"
+      "INFO:MainLogger:R2 eval_model: 0.0262124236620932\n"
      ]
     }
    ],
    "source": [
-    "model.score(X_test, y_test)"
+    "model.eval_model(X_test, y_test)"
    ]
   },
   {
@@ -2184,7 +2184,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score: 0.0041\n",
+      "R2 eval_model: 0.0041\n",
       "Mean Absolute Error: 22.13286070928927\n",
       "Mean Squared Error: 1723.3259856908633\n",
       "Root Mean Squared Error: 41.51296165887064\n"
@@ -2206,9 +2206,9 @@
     "with open(pkl_filename, 'rb') as file:\n",
     "    pickle_model = pickle.load(file)\n",
     "    \n",
-    "# Calculate the accuracy score and predict target values\n",
-    "score = pickle_model.score(X_test, y_test)\n",
-    "print(\"R2 score: {0:.4f}\".format(score))\n",
+    "# Calculate the accuracy eval_model and predict target values\n",
+    "eval_model = pickle_model.eval_model(X_test, y_test)\n",
+    "print(\"R2 eval_model: {0:.4f}\".format(eval_model))\n",
     "y_pred = pickle_model.predict(X_test)\n",
     "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))\n",
     "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))\n",
