--- a/notebooks/001_ROFA_exploration.ipynb
+++ b/notebooks/001_ROFA_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "4575a546",
    "metadata": {},
    "outputs": [],
@@ -14,9 +14,9 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from app.data_engineering.data_access import read_db\n",
-    "from app.utils.multi_column_label_encode import MultiColumnLabelEncoder\n",
+    "from app.ml.multi_column_label_encode import MultiColumnLabelEncoder\n",
     "from app.data_engineering.feature_engineering import FeatureEngineering\n",
-    "from app.model import Model\n",
+    "from app.ml.model import Model\n",
     "import math\n",
     "\n",
     "\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "01255589",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "5b042f58",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "dict_keys(['batch1', 'batch2', 'test'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "a7df8b75",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "d0573035",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
        " 'DATE']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,32 +114,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "8169c866",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['DECOLLAGE',\n",
-       " 'RETARD SYSTEM',\n",
-       " 'RETARD SECURITE',\n",
-       " 'ATTERRISSAGE',\n",
-       " 'HEURE DE DEPART',\n",
+       "['HEURE DE DEPART',\n",
+       " 'TEMPS PASSE',\n",
        " \"RAISON D'ANNULATION\",\n",
-       " \"RETARD A L'ARRIVEE\",\n",
+       " 'ANNULATION',\n",
+       " 'RETARD COMPAGNIE',\n",
+       " 'ATTERRISSAGE',\n",
        " 'RETARD METEO',\n",
        " 'DETOURNEMENT',\n",
-       " 'RETARD AVION',\n",
-       " \"HEURE D'ARRIVEE\",\n",
-       " 'RETART DE DEPART',\n",
        " 'TEMPS DE VOL',\n",
-       " 'TEMPS PASSE',\n",
-       " 'RETARD COMPAGNIE',\n",
-       " 'ANNULATION']"
+       " 'DECOLLAGE',\n",
+       " 'RETARD SECURITE',\n",
+       " 'RETARD SYSTEM',\n",
+       " \"HEURE D'ARRIVEE\",\n",
+       " \"RETARD A L'ARRIVEE\",\n",
+       " 'RETART DE DEPART',\n",
+       " 'RETARD AVION']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "624765b5",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        " dict_keys(['vols']))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "6c8b77a3",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "0eee1459",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "da892b1a",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "35c5ffc6",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
        "1082918      3178497  4175  71e5cdb634             DMM              CRL              1130                                       11.0            100.0       543                                            5.0                1310              WKEUW                   32  6/3/2018                -5.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "c7e9a271",
    "metadata": {},
    "outputs": [
@@ -632,7 +632,7 @@
        "max     5.255353e+06    6898.000000         NaN             NaN              NaN       2330.000000                                 177.000000       380.000000    2447.000000                                     151.000000         2355.000000                NaN           258.000000         NaN          838.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "2cf97e0c",
    "metadata": {},
    "outputs": [
@@ -829,7 +829,7 @@
        "RETARD A L'ARRIVEE                                0.015195 -0.010587          0.197419                                   0.189139        -0.037129 -0.021187                                       0.088539            0.147682             0.061688            1.000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "32c76611",
    "metadata": {},
    "outputs": [],
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "f8c2f7e7",
    "metadata": {},
    "outputs": [],
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "ef0eafd3",
    "metadata": {},
    "outputs": [],
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "bf33a77c",
    "metadata": {},
    "outputs": [],
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "35a62069",
    "metadata": {},
    "outputs": [],
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "7a2142f9",
    "metadata": {},
    "outputs": [],
@@ -953,14 +953,14 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "from app.utils.multi_column_label_encode import MultiColumnLabelEncoder\n",
+    "from app.ml.multi_column_label_encode import MultiColumnLabelEncoder\n",
     "\n",
     "\n",
     "class FeatureEngineering:\n",
     "    def __init__(self, training_columns=None, columns_to_dummify=None, df_airport=None):\n",
     "        self.training_columns = training_columns\n",
     "        self.columns_to_dummify = columns_to_dummify\n",
-    "        self.label_encoder = MultiColumnLabelEncoder(columns=self.columns_to_dummify)\n",
+    "        self.label_encoder = MultiColumnLabelEncoder(encoded_columns=self.columns_to_dummify)\n",
     "        self.average_nb_plane_by_day = {}\n",
     "        self.airport = self.__get_airport_dict(df_airport)\n",
     "        \n",
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "cbde1610",
    "metadata": {},
    "outputs": [],
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "ea6efd91",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1430,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "701d92ef",
    "metadata": {},
    "outputs": [
@@ -1717,7 +1717,7 @@
        "max       908.000000        63.000000         50.000000                               21.816606                                  18.588504                                  13.304135                                      12.288206       380.000000    2447.000000            3.000000           258.000000      12.000000      53.000000               23.000000                 23.000000      44.000000      38.000000     5558.000000      5763.000000         135.000000         60.000000                        94.000000                                         9.000000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "27accfc5",
    "metadata": {},
    "outputs": [],
@@ -1765,7 +1765,7 @@
     "        return self\n",
     "\n",
     "    def predict(self, X):\n",
-    "        return self.rf_regressor.predict(X)\n",
+    "        return np.around(self.rf_regressor.predict(X))\n",
     "\n",
     "    def score(self, X, y):\n",
     "        y_pred = self.predict(X)\n",
@@ -1797,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "7def736f",
    "metadata": {},
    "outputs": [
@@ -1806,8 +1806,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  26 tasks      | elapsed:    6.6s\n",
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:   18.9s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  26 tasks      | elapsed:    6.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:   17.5s finished\n"
      ]
     }
    ],
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "id": "0cda51fe",
    "metadata": {},
    "outputs": [
@@ -1938,7 +1938,7 @@
        "1283362          87               39                39                                0.427007                                   2.271898                                   5.196152                                       2.000000            110.0       397                   3                  213     8       34                      20                        22           38             6           157.0             13.0                121                30                               43                                                4"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1949,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "id": "0bf535b2",
    "metadata": {},
    "outputs": [
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "id": "24a8d094",
    "metadata": {
     "scrolled": true
@@ -1978,21 +1978,21 @@
     {
      "data": {
       "text/plain": [
-       "array([-4.94118632, 18.77948405, -1.0155356 ])"
+       "array([-5., 19., -1.])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred[:3]"
+    "np.around(y_pred[:3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "id": "95816b44",
    "metadata": {},
    "outputs": [
@@ -2005,7 +2005,7 @@
        "Name: RETARD A L'ARRIVEE, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2024,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "id": "aacdb5d4",
    "metadata": {},
    "outputs": [
@@ -2034,11 +2034,11 @@
      "text": [
       "[Parallel(n_jobs=12)]: Using backend ThreadingBackend with 12 concurrent workers.\n",
       "[Parallel(n_jobs=12)]: Done  26 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=12)]: Done 100 out of 100 | elapsed:    0.1s finished\n",
-      "INFO:MainLogger:Mean Absolute Error: 17.09959000392783\n",
-      "INFO:MainLogger:Mean Squared Error: 950.84520954039\n",
-      "INFO:MainLogger:Root Mean Squared Error: 30.83577807580652\n",
-      "INFO:MainLogger:R2 score: 0.13483199400158885\n"
+      "[Parallel(n_jobs=12)]: Done 100 out of 100 | elapsed:    0.0s finished\n",
+      "INFO:MainLogger:Mean Absolute Error: 17.094127209916685\n",
+      "INFO:MainLogger:Mean Squared Error: 950.6830725462304\n",
+      "INFO:MainLogger:Root Mean Squared Error: 30.833148923621643\n",
+      "INFO:MainLogger:R2 score: 0.13497952142090808\n"
      ]
     }
    ],
@@ -2048,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "id": "4bf3d6e5",
    "metadata": {},
    "outputs": [
@@ -2058,11 +2058,11 @@
      "text": [
       "[Parallel(n_jobs=12)]: Using backend ThreadingBackend with 12 concurrent workers.\n",
       "[Parallel(n_jobs=12)]: Done  26 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=12)]: Done 100 out of 100 | elapsed:    0.3s finished\n",
-      "INFO:MainLogger:Mean Absolute Error: 16.151112774061048\n",
-      "INFO:MainLogger:Mean Squared Error: 725.7377338950515\n",
-      "INFO:MainLogger:Root Mean Squared Error: 26.939519926959566\n",
-      "INFO:MainLogger:R2 score: 0.22169035487543542\n"
+      "[Parallel(n_jobs=12)]: Done 100 out of 100 | elapsed:    0.2s finished\n",
+      "INFO:MainLogger:Mean Absolute Error: 16.14751394714338\n",
+      "INFO:MainLogger:Mean Squared Error: 725.8074377977766\n",
+      "INFO:MainLogger:Root Mean Squared Error: 26.940813606826662\n",
+      "INFO:MainLogger:R2 score: 0.2216156016729217\n"
      ]
     }
    ],
@@ -2146,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "id": "89188d88",
    "metadata": {},
    "outputs": [
@@ -2162,11 +2162,10 @@
     {
      "data": {
       "text/plain": [
-       "array([10.57560032, 52.09558714, 11.42283089, 48.08231407, 11.47248881,\n",
-       "       37.4878351 , 47.30952116, 62.71089057, 48.25104988])"
+       "array([11., 52., 11., 48., 11., 37., 47., 63., 48.])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
